# HerbWise-AI

./: .env.demo.example  .gitignore  README.md  compose.demo.yaml  compose.dev.yaml  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/migrations/: env.py  script.py.mako
backend/scripts/: ai_provider_doctor.py  capture_demo_replay.py  check_knowledge_document.py  config_doctor.py  doctor_common.py  evaluate_rag_retrieval.py  export_frontend_mocks.py  export_openapi.py  import_medicine_class_mapping.py  init_db.py  knowledge_document_tools.py  local_model_doctor.py  ragflow_doctor.py  register_knowledge_document.py  repository_guard.py  reset_db.py  seed_data.py  seed_learning_questions.py  smoke_degradation.py  smoke_demo_replay.py  smoke_v02.py  smoke_v03a_fake.py  smoke_v03a_real.py  smoke_v03b_fake.py  smoke_v03b_real.py  smoke_v03c_real.py  sync_knowledge_document.py  verify_demo_replay.py  verify_rag_citations.py
backend/tests/: README.md  test_api_contracts.py  test_fixed_vision_pipeline.py  test_health.py  test_json_safe.py  test_learning_plan_contract.py  test_learning_task_contract.py  test_migration_v02.py  test_model_settings_purposes.py  test_openapi_v02.py  test_providers.py  test_recognition_agent_decoupling.py  test_resource_agent_rules.py  test_resource_generation_workflow.py  test_single_name_recognition.py  test_v02_rules.py  test_v03a_ai.py  test_v03b_completion.py  test_v041_config_ragflow.py  test_v04_delivery.py  test_workflow.py  (+1 more)
(+309 files in other folders)
