[project]
name = "backend"
version = "0.4.1"
description = "Backend for HerbWise-AI intelligent herbal medicine training platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.5",
    "asyncmy>=0.2.11",
    "cryptography>=49.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.139.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "orjson>=3.11.9",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

[[tool.mypy.overrides]]
module = ["aiofiles.*"]
ignore_missing_imports = true
